--- a/src/main/resources/templates/teacherIndex.html
+++ b/src/main/resources/templates/teacherIndex.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="dbSystem"/>
-    <meta name="author" content="kasmine"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="dbSystem" />
+    <meta name="author" content="kasmine" />
     <!-- <link rel="icon" href="../../favicon.ico"> -->
     <title>教师管理系统</title>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
     <link href="css/teacherIndex.css" rel="stylesheet" />
 </head>
@@ -32,14 +31,14 @@
                     <li><a href="#">退出</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
-                    <input type="text" class="form-control" placeholder="Search..."/>
+                    <input type="text" class="form-control" placeholder="Search..." />
                 </form>
             </div>
         </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <aside class="left-panel" tabindex="5000">
+            <div class="col-sm-3 col-md-2 sidebar">
                 <!-- Navbar Start -->
                 <nav class="navigation">
                     <ul class="list-unstyled">
@@ -78,15 +77,15 @@
                         </li>
                     </ul>
                 </nav>
-            </aside>
-            <div class="main">
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <section class="content scroll">
                     <div class="carousel slide" id="guide-block" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="item active">
                                 <h1 class="page-header">平台介绍</h1>
                                 <div class="guide-content">
-                                    <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统"/>
+                                    <img width="269" height="269" src="http://static.guokr.com/apps/academy/images/a66f9841.guide1-1.png" alt="华南理工大学考试系统" class="img-circle" />
                                     <p>
                                         这里介绍我们的教师管理系统
                                     </p>
@@ -96,18 +95,18 @@
                                 <h1 class="page-header">友情链接</h1>
                                 <ul class="guide-content friendly_lnk">
                                     <li class="shade">
-                                        <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网"/>
+                                        <a href="http://www.scut.edu.cn/new/"> <img src="images/SCUT官网.jpg" alt="华南理工大学官网" class="img-thumbnail" />
                                             <p>华南理工大学官网</p>
                                         </a>
                                     </li>
                                     <li class="shade">
-                                        <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统"/>
+                                        <a href="http://www.scut.edu.cn/jw2005/"> <img src="images/jw2005.png" alt="华南理工大学教务管理系统" class="img-thumbnail" />
                                             <p>华南理工大学教务管理系统</p>
                                         </a>
                                     </li>
                                     <li class="shade">
                                         <a href="http://222.16.42.161/eol/homepage/common/">
-                                            <img src="images/homepage.png" alt="华南理工大学教学在线"/>
+                                            <img src="images/homepage.png" alt="华南理工大学教学在线" class="img-thumbnail" />
                                             <p>华南理工大学教学在线</p>
                                         </a>
                                     </li>
@@ -129,7 +128,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="班级管理界面"/>
+                        <img width="269" height="269" src="" alt="班级管理界面" />
                         <p>
                             班级管理模块
                         </p>
@@ -140,7 +139,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="试题管理界面"/>
+                        <img width="269" height="269" src="" alt="试题管理界面" />
                         <p>
                             试题管理·模块
                         </p>
@@ -151,7 +150,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="试题评阅界面"/>
+                        <img width="269" height="269" src="" alt="试题评阅界面" />
                         <p>
                             试题评阅·模块
                         </p>
@@ -162,7 +161,7 @@
                             功能预览
                         </h1>
                     <div class="guide-content">
-                        <img width="269" height="269" src="" alt="详细成绩界面"/>
+                        <img width="269" height="269" src="" alt="详细成绩界面" />
                         <p>
                             详细成绩·模块
                         </p>
