--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,13 +1,32 @@
 html{height:100%;width:100%;display:table;font-size:16px;text-align:center;margin:0 auto;-webkit-tap-highlight-color:rgba(0,0,0,0)}
-body{background:rgba(0,0,0,0.2);font:0.8em 'Microsoft Yahei',Arial;;color:#333333;height:100%;vertical-align:middle;display:table-cell}
+body{
+    background:url(../images/bg.png) rgba(3, 233, 244, 0.04);font:0.8em 'Microsoft Yahei',Arial;;color:#333333;height:100%;vertical-align:middle;display:table-cell}
+
+
 a{color:rgb(51,119,170)}
 a:link{color:rgb(102,102,153)}
-.input-group-addon{background:rgb(149,214,105);min-width:80px;}
+
+/*重写boostrap*/
+.navbar-fixed-top {
+    background: rgb(12,126,217);
+    /* border-bottom: 1px solid rgb(179, 179, 179); */
+    top: 0;
+    color: rgb(38, 38, 38);
+    border-width: 0 0 1px;
+    padding: 3px 43px;
+}
+.navbar-brand {
+    background: url(../images/SCUT.png) no-repeat left center;
+    background-size: cover;
+    width: 200px;
+}
+
+.input-group-addon{background:rgb(51,122,183);min-width:80px;font-size: 16px;color: rgb(255, 255, 255);}
 button[type='submit']>span{display:none;margin-left:8px}
-button#btn_submit{background:rgb(149,214,105);border:none}
-button#btn_submit:hover{background:rgb(5,162,77)}
+button#btn_submit{background:rgb(3, 109, 244);border:none;transition: all 500ms;font-size: 14px;color: rgb(255, 255, 255);}
+button#btn_submit:hover{background:rgb(12,126,217);}
 button[type='submit']:hover>span{display:inline-block}
-#form{width:50%;max-width:400px;min-width:340px;margin:auto;color:#fff;padding:38px 48px;background:rgba(255,255,255,0.7);border-radius:5px;box-shadow:0px 0px 14px rgba(0,0,0,.5)}
+#form{width:50%;max-width:400px;min-width:340px;margin:auto;color:#fff;padding:38px 48px;background:rgb(217,237,247);border-radius:5px;box-shadow:0px 0px 14px rgba(0,0,0,.5)}
 .form-group{box-shadow:0px 5px 7px rgba(0,0,0,0.2);margin-bottom:15px;border-radius:5px;}
 .form-group.form-radio{box-shadow:none;color:#666;}
 .form-group.form-radio label{display:inline-block;max-width:100%;margin-bottom:5px;font-weight:bold;font-size:14px;font-weight:normal;line-height:1;color:rgb(85,85,85);margin-left:8px;margin-right:15px;}
