--- a/src/main/resources/static/css/teacherIndex.css
+++ b/src/main/resources/static/css/teacherIndex.css
@@ -178,6 +178,8 @@ div.guide-content{
 
 .guide-content li img {
     width: 90%;
-    height: 220px;box-shadow: 7px 7px 7px -7px #000, -7px -7px 7px -7px #000;
-
+    height: 220px;
+}
+.guide-content img:hover {
+    box-shadow: 7px 7px 7px -7px #000, -7px -7px 7px -7px #000;
 }
