--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="dbSystem" />
     <meta name="author" content="kasmine" />
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <link rel="icon" href="../../favicon.ico">
     <title>管理员系统</title>
     <!-- Bootstrap core CSS -->
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
