--- a/src/main/resources/templates/classManagement.html
+++ b/src/main/resources/templates/classManagement.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="icon" href="favicon.ico" />
     <title>班级管理</title>
-    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css"/>
-    <link rel="stylesheet" type="text/css" href="css/effect/icon.css"/>
-    <link rel="stylesheet" type="text/css" href="css/teacher.css"/>
-    <link rel="stylesheet" type="text/css" href="css/classManagement.css"/>
+    <link rel="stylesheet" type="text/css" href="css/effect/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="css/effect/icon.css" />
+    <link rel="stylesheet" type="text/css" href="css/teacher.css" />
+    <link rel="stylesheet" type="text/css" href="css/classManagement.css" />
     <script type="text/javascript" src="js/effects/jquery-2.2.3.js"></script>
     <script type="text/javascript" src="js/effects/jquery.easyui.min.js"></script>
 </head>
