--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <link rel="icon" href="favicon.ico" />
     <title>登录界面</title>
 </head>
 
