--- a/src/main/resources/templates/paperEdit.html
+++ b/src/main/resources/templates/paperEdit.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="dbSystem" />
     <meta name="author" content="kasmine" />
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
-    <title>管理员系统</title>
+    <link rel="icon" href="favicon.ico" />
+    <title>试卷编辑</title>
     <!-- Bootstrap core CSS -->
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css"> -->
-    <!-- Custom styles for this template -->
+    <link href="css/common.css" rel="stylesheet" />
     <link href="css/paperEdit.css" rel="stylesheet" />
 </head>
 
@@ -110,10 +109,6 @@
                         </div>
                     </div>
                     <div class="paper-panel">
-                        <div class="containerType1"></div>
-                        <div class="containerType2"></div>
-                        <div class="containerType3"></div>
-                        <div class="containerType4"></div>
                     </div>
                 </div>
             </div>
@@ -154,7 +149,7 @@
                     <div class="form-group">
                         <label for="" class="col-sm-2 control-label">题目</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name='questionTitle' placeholder="Title">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
@@ -222,7 +217,7 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control" name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
@@ -264,7 +259,7 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control " name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
@@ -303,7 +298,7 @@
                     <div class="form-group ">
                         <label for=" " class="col-sm-2 control-label ">题目</label>
                         <div class="col-sm-10 ">
-                            <input type="text " class="form-control " name='questionTitle' placeholder="Title ">
+                            <textarea type="text" class="form-control" name='questionTitle' placeholder="Title"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
