--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="css/effect/bootstrap.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/select.css" />
     <title>选择试卷</title>
 </head>
@@ -52,4 +53,5 @@
         </div>
     </script>
 </body>
+
 </html>
