--- a/src/main/resources/templates/paperManagement.html
+++ b/src/main/resources/templates/paperManagement.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="icon" href="favicon.ico" />
     <title>班级管理</title>
     <link rel="stylesheet" type="text/css" href="css/effect/easyui.css" />
     <link rel="stylesheet" type="text/css" href="css/effect/icon.css" />
